CSS: Fix special view layout issues

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -21,6 +21,7 @@
   width: 100%;
   flex: 1;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 #layout:not(.minimal-layout) #menu {
